# Data-Science-Projects

./: .gitignore  .gitmodules  P2_Final_Burgess_Cayo_Loomis_Lubben.ipynb  P2_burgess.ipynb  README.md
Final-Written-Reports/Flight-Delay-Prediction/: 261_Final_Report.html
Flight-Delay-Prediction/: README.md
Flight-Delay-Prediction/Code/: w261_flight_prediction.ipynb
Flight-Delay-Prediction/Written_Report/: 261_Final_Report.ipynb
Generational Income Trend Analysis/: README.md
Generational-Income-Trend-Analysis/: README.md  lab_2_code.Rmd
Generational-Income-Trend-Analysis/Data_files/: GSS.dct
Google Customer Return Prediction/: README.md
Google-Customer-Return-Prediction/: README.md
RAG-QA-System-Evaluation/: README.md
RAG-QA-System-Evaluation/Code/: 2024_Fall_267_assignment_V.ipynb  narrative-code-notebook.ipynb
Refugee-Network-Analysis-with-NoSQL/: README.md
Refugee-Network-Analysis-with-NoSQL/Code/: project_3_final_code.ipynb
Refugee-Network-Analysis-with-NoSQL/Data_Files/: country_lat_lng.csv
Spotify Hit Song Predictor/: README.md
Spotify-Hit-Song-Predictor/: README.md
YouTube AB-Test/: README.md
YouTube-AB-Test/: README.md
rag-pipeline/: README.md
rag-pipeline/data-engineering/: Dockerfile  (+3 more)
rag-pipeline/pinecone-embedding/: README.md  main.py  pyproject.toml
rag-pipeline/pinecone-embedding/src/rag_ingest/: embed_dense.py  embed_sparse.py  ingest.py  pinecone_setup.py  s3_loader.py  upsert.py
rag-pipeline/pinecone-embedding/tests/: test_embeddings.py  test_ingest.py  test_pinecone_setup.py  test_s3_loader.py  test_upsert.py
(+40 files in other folders)
